# docs/swagger.yaml
@@ -73,6 +73,8 @@ definitions:
         type: string
       description:
         type: string
+      image:
+        type: string
       name:
         type: string
       price:
@@ -123,6 +125,35 @@ definitions:
         items:
           $ref: '#/definitions/models.Category'
         type: array
+    type: object
+  controllers.GetProductByIdResponse:
+    properties:
+      brand:
+        type: string
+      categoryId:
+        type: integer
+      country:
+        type: string
+      description:
+        type: string
+      errorMessage:
+        type: string
+      id:
+        type: integer
+      imageUrl:
+        type: string
+      name:
+        type: string
+      oldPrice:
+        type: number
+      price:
+        type: number
+      shelfLife:
+        type: string
+      storageConditions:
+        type: string
+      weight:
+        type: number
     type: object
   controllers.GetProductsResponse:
     properties:
@@ -375,6 +406,35 @@ paths:
           schema:
             $ref: '#/definitions/controllers.CreateProductResponse'
       summary: Создание нового продукта
+      tags:
+      - Product
+  /product/id:
+    get:
+      consumes:
+      - application/json
+      description: Возвращает информацию о продукте по идентификатору
+      parameters:
+      - description: Идентификатор продукта
+        in: query
+        name: id
+        required: true
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/controllers.GetProductByIdResponse'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/controllers.GetProductByIdResponse'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/controllers.GetProductByIdResponse'
+      summary: Получить информацию о продукте по идентификатору
       tags:
       - Product
   /send-code-again:
